# team-agent-platform

./: .env.example  .gitignore  .team-agent-platform.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: deps.py  downloads.py  router.py
apps/backend/app/assets/: finalize_run.py.tmpl
apps/backend/app/core/: __init__.py  config.py  db.py  security.py
apps/backend/app/models/: __init__.py  agent.py  agent_version.py  base.py  export_job.py  platform_settings.py  review.py  run.py  team.py  user.py
apps/backend/app/repositories/: agent.py  agent_version.py  export_job.py  platform_settings.py  review.py  run.py  team.py  user.py
apps/backend/app/schemas/: agent.py  agent_version.py  auth.py  claude.py  codex.py  export.py  github.py  health.py  host.py  review.py  run.py  team.py  terminal.py  user.py  workspace.py
apps/backend/app/services/: agent_service.py  agent_version_service.py  auth_service.py  bootstrap_service.py  claude_proxy_service.py  codex_proxy_service.py  export_service.py  github_proxy_service.py  host_execution_service.py  (+14 more)
apps/backend/migrations/: env.py
apps/backend/tests/: conftest.py  test_agent_versions_api.py  test_agents_api.py  test_auth_api.py  test_exports_api.py  test_github_api.py  test_health.py  test_host_diagnostics_api.py  test_reviews_api.py  test_run_usage.py  test_runs_api.py  test_teams_api.py  test_workspaces_api.py
apps/host-executor/: pyproject.toml
apps/host-executor/host_executor_app/: __init__.py  main.py
apps/host-executor/tests/: test_claude_session_service.py  test_codex_session_service.py  test_host_executor_api.py  test_workspace_service.py  test_workspaces_api.py
(+136 files in other folders)
